service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
  labels:
    app: task-api
spec:
  type: ClusterIP
  selector:
    app: task-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
