ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api
  labels:
    app: task-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: nodejs.sample.application.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-api
                port:
                  number: 80
